syntax = "proto3";

package smartFarming;

service HarvestPrediction {
  rpc PredictHarvest(PredictHarvestRequest) returns (stream PredictHarvestResponse);
}

message PredictHarvestRequest {
  string crop_type = 1;
  string field_id = 2;
  Parameters parameters = 3;
}

message Parameters {
  float planting_density = 1;
  float average_plant_weight = 2;
  int32 days_to_maturity = 3;
  // Add any other relevant parameters for the prediction
}

message PredictHarvestResponse {
  float predicted_yield = 1;
  string predicted_harvest_date = 2;
  bool success = 3;
  string message = 4;
}